# FutureTomorrowExperience_ROS2

./: .gitignore  README.md  [미래내일청년팀]미래내일일경험_프로젝트_결과보고서_결과,도전과제추가.hwp  프로젝트_계획서 양식.hwp
fine_tuning/data/: mydata.jsonl
fine_tuning/src/: fine_tuning.py
openai_cpp_pkg/: CMakeLists.txt  package.xml
openai_cpp_pkg/include/openai/: openai.hpp
openai_cpp_pkg/include/openai_cpp_pkg/: bridge.hpp  chat_gpt.hpp  mic.hpp  speaker.hpp  whisper.hpp
openai_cpp_pkg/src/client_node/: bridge.cpp  chat_gpt.cpp  time.cpp
openai_cpp_pkg/src/robot_node/: answer_bridge.cpp  mic.cpp  question_bridge.cpp  speaker.cpp
openai_cpp_pkg/src/whisper/: main.cpp  whisper.cpp
openai_interface/: CMakeLists.txt  package.xml
openai_py_pkg/: package.xml  setup.cfg  setup.py
openai_py_pkg/openai_py_pkg/: tts.py
test_cpp_pkg/: CMakeLists.txt  package.xml
test_cpp_pkg/include/openai/: openai.hpp
test_cpp_pkg/include/openai_cpp_pkg/: whisper.hpp
test_cpp_pkg/src/mike_node/: mike.cpp
test_pkg/src/: opanai_test.py
test_pkg/ui/: main.ui
프로젝트 서류/: [미래내일청년]최종_미래내일일경험_결과보고서.hwp  [미래내일청년팀]미래내일일경험_프로젝트_결과보고서_초안0814.hwp  미래내일청년_PPT.pptx  미래내일청년_미래내일일경험PPT.pptx  프로젝트_계획서 양식.hwp
